# mmars

./: .gitignore  .travis.yml  README.md  mmars.sln
mmars/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  core.cpp  core.hpp  instruction.hpp  main.cpp  mmars.cpp  mmars.hpp  mmars.vcxproj  mmars.vcxproj.filters  parser.cpp  parser.hpp  task_queue.hpp  thread_pool.h  thread_pool.hpp  util.cpp  util.hpp  warrior.hpp  wasm.cpp
